# bazel_rules_docker_ts_test

./: BUILD.bazel  WORKSPACE  package.json
