# Add rules here to build your software
# See https://docs.bazel.build/versions/master/build-ref.html#BUILD_files

exports_files(["tsconfig.json"], visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_library")
#load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")

ts_library(
    name = "hello",
    srcs = ["hello.ts"],
)

#nodejs_binary(
#    name = "bin",
#    data = [":hello"],
#    entry_point = ":hello.ts",
#)

nodejs_image(
    name = "nodejs_image",
    data = [":hello"],
    entry_point = ":hello.ts"
)
